--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,5 @@
+# SPDX-FileCopyrightText: 2020 Free Software Foundation Europe e.V. <https://fsfe.org>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 sonar.projectKey=com.shell.reuse-action
