--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
-# SPDX-FileCopyrightText: Internal
+# SPDX-FileCopyrightText: 2020 Free Software Foundation Europe e.V. <https://fsfe.org>
 #
-# SPDX-License-Identifier: Internal
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 name: Build
 
